[project]
name = "linkding-ai-sync"
version = "0.1.0"
description = "Sync GitHub stars into Linkding and enrich bookmarks with AI-generated tags."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "pydantic-settings>=2.8.1",
  "typer>=0.16.0",
]

[project.scripts]
linkding-ai = "linkding_ai.main:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkding_ai"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
